Avoid NullPointerException from List.of